==> Madara165/sht1x_esp32_idf_library-master/main/src/sht1x.c <==
#include "include/sht1x.h"

int LSBFIRST = 0;
int MSBFIRST = 1;

float readTempC(int data, int clk) {
  int obtVal;
  float temp;

  // Temperature constants for sht11 at 14bit
  const float D1 = -39.66; // at 3.3v
  const float D2 = 0.01;  // for 14 bits

  // printf("reading raw data\n");
  obtVal = readTemperatureRaw(data, clk); // get the temperature reading from sensor (raw data)

  // printf("raw data: %d\n", obtVal);
  temp = D1 + (D2 * obtVal); // calculation for temperature given in data sheet

  return temp;
}

float readTempF(int data, int clk) {
  int obtVal;
  float temp;

  const float D1 = -39.4; // at 3.3V
  const float D2 = 0.018; // for 14 bit data

  obtVal = readTemperatureRaw(data, clk); // get the reading from sensor (raw // data)

  skipCRC(data, clk); // skip performing CRC

  temp = D1 + (D2 * obtVal); // calculation for temperature given in datasheet

  return temp;
}

float readHumidity(int data, int clk) {
  int obtVal, obtValTemp;
  float relHumidity;
  float HumidityTemp;

  // Humidity constants for 12 bit
  const float c1 = -2.0468;
  const float c2 = 0.0367;
  const float c3 = 0.00000155; //-1.5955E-6

  // Temperature constants for 12 bit
  const float t1 = 0.01;    // for 12 bit
  const float t2 = 0.00008; // for 12 bit

  obtVal = getHumidityfrmSensor(data, clk); // get the sensor reading raw data for humidity
  skipCRC(data, clk);
  relHumidity = c1 + (c2 * obtVal) + (c3 * (obtVal * obtVal)); // convert it into relative humidity for linear compensation
  obtValTemp = readTempC(data, clk); // get the senor reading raw data for temp
  skipCRC(data, clk);
  HumidityTemp = (obtValTemp - 25.0) * (t1 + t2 * obtVal) + relHumidity; // calculate relative humidity with temperature compensation

  return HumidityTemp;
}

int readTemperatureRaw(int data, int clk) {

  // printf("getting temperature from sensor...\n");
  int val;
  gpio_set_direction(data, GPIO_MODE_INPUT);

  gpio_set_direction(clk, GPIO_MODE_OUTPUT);

  int cmd = 0b00000011;

  // printf("data pin: %d \n", data);
  // printf("clk pin: %d \n", clk);

  // printf("sending command to read temperature from sensor...\n");
  sendCommandSHT(cmd, data, clk); // Send command to read temperature from sensor

  // printf("waiting for results...\n");
  waitForResult(data); // wait till sensor finishes reading data

  val = getData16SHT(data, clk); // read the data from the Sensor
  skipCRC(data, clk);

  // printf("val: %d \n", val);

  return val;
}

// Read Humidity from the Sensor

int getHumidityfrmSensor(int data, int clk) {

  gpio_set_direction(data, GPIO_MODE_INPUT);
  gpio_set_direction(clk, GPIO_MODE_OUTPUT);
  // int val,i,read=0;
  int cmd = 0b000000101;          // cmd to read humidity
  sendCommandSHT(cmd, data, clk); // sendcmd to read humidity to sensor

  waitForResult(data); // poll untill sensor has finished measuring data

  int val = getData16SHT(data, clk); // read the data from sensor
  return val;
}

// Send the command to read temp or humidity to microcontroller
void sendCommandSHT(int cmd, int data, int clk) {
  int ack;

  gpio_set_direction(data, GPIO_MODE_OUTPUT);
  gpio_set_direction(clk, GPIO_MODE_OUTPUT);

  // Initiate the start signal to sensor
  gpio_set_level(data, HIGH);
  gpio_set_level(clk, HIGH);
  gpio_set_level(data, LOW);
  gpio_set_level(clk, LOW);
  gpio_set_level(clk, HIGH);
  gpio_set_level(data, HIGH);
  gpio_set_level(clk, LOW);

  shiftOut(data, clk, MSBFIRST, cmd); // send the command to sensor
  // shiftOut(data, clk, cmd); // send the command to sensor

  gpio_set_level(clk, HIGH);
  gpio_set_direction(data, GPIO_MODE_INPUT);

  // Check acknowlwdgement if the sensor has ack the cmd
  ack = gpio_get_level(data);
  if (ack != LOW) {
    // Serial.println("Error: ack not received");//error;
  }
  gpio_set_level(clk, LOW);
  // check if sensor has started measuring data after ack
  ack = gpio_get_level(data);
  if (gpio_get_level(data) != HIGH) {
    // Serial.println("Error : not able to measure");
  }
}

void delay(int number_of_seconds) {
  // Converting time into milli_seconds
  int milli_seconds = 1000 * number_of_seconds;

  // Stroing start time
  clock_t start_time = clock();

  // looping till required time is not acheived
  while (clock() < start_time + milli_seconds)
    ;
}

// pooling for the sensor to complete measuring data
void waitForResult(int data) {

  // int i, flag = 0,
  int i;
  int flag = 0;
  // printf("-> sht1x is not ready\n");
  int ack;
  gpio_set_direction(data, GPIO_MODE_INPUT);
  for (i = 0; i < 100; i++) {
    // delay(10);
    vTaskDelay(10 / portTICK_PERIOD_MS);
    ack = gpio_get_level(data);
    if (ack == LOW) {
      flag = 1;
      break;
    }
  }
  if (ack == HIGH) {
    // printf("Error: while giving measurement\n");
    // Serial.println("Error: while giving measurement");
    flag = 2;
  }
}

// Read measurement from sensor
int getData16SHT(int data, int clk) {

  // gpio_set_direction(data, GPIO_MODE_INPUT);
  // gpio_set_direction(clk, GPIO_MODE_OUTPUT);

  // int val1, read1 = 0;
  // int MSBFIRST_ = MSBFIRST;
  // read1 = shiftIn(data, clk, MSBFIRST_); // read MSB byte
  // val1 = (read1 << 8);                   // read1*256;

  // // Send acknowledgement to sensor that MSB byte is read
  // gpio_set_direction(data, GPIO_MODE_OUTPUT);

  // gpio_set_level(data, HIGH);
  // gpio_set_level(data, LOW);
  // gpio_set_level(clk, HIGH);
  // gpio_set_level(clk, LOW);

  // gpio_set_direction(data, GPIO_MODE_INPUT);

  // read1 = 0;
  // read1 = shiftIn(data, clk, MSBFIRST_); // read LSB byte of from the sensor
  // val1 |= read1;                         // add LSB to MSB

  // return val1; // return the read value from sensor

  int val = 0;

  // get the MSB (most significant bits)
  gpio_set_direction(data, GPIO_MODE_INPUT);
  gpio_set_direction(clk, GPIO_MODE_OUTPUT);

  val = shiftIn(data, clk, 8);
  val *= 256; // this is equivalent to val << 8;

  // send the required ACK
  gpio_set_direction(data, GPIO_MODE_OUTPUT);
  gpio_set_level(data, HIGH);
  gpio_set_level(data, LOW);
  gpio_set_level(clk, HIGH);
  gpio_set_level(clk, LOW);

  // get the LSB (less significant bits)
  gpio_set_direction(data, GPIO_MODE_INPUT);
  val |= shiftIn(data, clk, 8);

  return val;
}

uint8_t shiftIn(uint8_t dataPin, uint8_t clockPin, uint8_t bitOrder) {

  uint8_t value = 0;
  uint8_t i;

  for (i = 0; i < 8; ++i) {

    gpio_set_level(clockPin, HIGH);

    if (bitOrder == LSBFIRST) {
      value |= gpio_get_level(dataPin) << i;

    } else {
      value |= gpio_get_level(dataPin) << (7 - i);
    }
    gpio_set_level(clockPin, LOW);
  }
  // printf("shift in val:%hhu\n", value);
  return value;
}

void shiftOut(uint8_t dataPin, uint8_t clockPin, uint8_t bitOrder, uint8_t val) {
  uint8_t i;

  for (i = 0; i < 8; i++) {
    if (bitOrder == LSBFIRST)
      gpio_set_level(dataPin, !!(val & (1 << i)));
    else
      gpio_set_level(dataPin, !!(val & (1 << (7 - i))));

    gpio_set_level(clockPin, HIGH);
    gpio_set_level(clockPin, LOW);
  }
}

// Skip the CRC
void skipCRC(int data, int clk) {

  gpio_set_direction(data, GPIO_MODE_OUTPUT);
  gpio_set_direction(clk, GPIO_MODE_OUTPUT);

  gpio_set_level(data, HIGH);
  gpio_set_level(clk, HIGH);
  gpio_set_level(clk, LOW);
}

esp_err_t sht1x_init(gpio_num_t data_pin, gpio_num_t clc_pin) {

  float temp_c;
  float temp_f;
  float humidity;

  printf("~~~~~~~~~~~~~~~~~\n");
  printf("  SHT1X Sensor   \n");
  printf("~~~~~~~~~~~~~~~~~\n");
  printf("-> setting data pin %d \n", data_pin);
  printf("-> setting sck pin %d \n", clc_pin);
  printf("\n***************************\n");

  for (;;) {
    // Read values from the sensor
    temp_c = readTempC(data_pin, clc_pin);
    temp_f = readTempF(data_pin, clc_pin);
    humidity = readHumidity(data_pin, clc_pin);

    printf("-> Temperature:  %.2f °C \n", temp_c);
    printf("-> Temperature:  %.2f F \n", temp_f);
    //int max_adc = 16384; // 14 bit sensor
    printf("-> Humidity: %.2f%% \n", humidity-12.5f /*+ 125 * ((float)humidity / max_adc) + 93)*/);
    printf("\n");

    vTaskDelay(3000 / portTICK_PERIOD_MS);
  }
  return ESP_OK;
}
